2008-02-21  Hendrik Hoeth  <hendrik.hoeth@cern.ch>

	* Added EEC and AEEC to the DELPHI_1996_S3430090 analysis. The
	normalisation of these histograms is still broken (ticket #163).

2008-02-19  Hendrik Hoeth  <hendrik.hoeth@cern.ch>

	* Many fixes to the DELPHI_1996_S3430090 analysis: bugfix in the
	calulation of eigenvalues/eigenvectors in MatrixDiag.hh for the
	sphericity, rewrite of Thrust/Major/Minor, fixed scaled momentum,
	hemisphere masses, normalisation in single particle events,
	final state slicing problems in the projections for Thrust,
	Sphericity and Hemispheres.

2008-02-08  Andy Buckley  <andy@insectnation.org>

	* Applied fixes and extensions to DIS classes, based on
	submissions by Dan Traynor.

2008-02-06  Andy Buckley  <andy@insectnation.org>

	* Made projection pointers used for cut combining into const
	pointers. Required some redefinition of the Projection* comparison
	operator.

	* Temporarily added FinalState member to ChargedFinalState to stop
	projection lifetime crash.

2008-02-01  Andy Buckley  <andy@insectnation.org>

	* Fixed another misplaced factor of bin width in the
	Analysis::normalize() method.

2008-01-30  Andy Buckley  <andy@insectnation.org>

	* Fixed the conversion of IHistogram1D to DPS, both via the
	explicit Analysis::normalize() method and the implicit
	AnalysisHandler::treeNormalize() route. The root of the problem is
	the AIDA choice of the word "height" to represent the sum of
	weights in a bin: i.e. the bin width is not taken into account
	either in computing bin height or error.

2008-01-22  Andy Buckley  <andy@insectnation.org>

	* Beam projection now uses HepMC GenEvent::beam_particles() method
	to get the beam particles. This is more portable and robust for
	C++ generators, and equivalent to the existing "first two" method
	for Fortran generators.

2008-01-17  Andy Buckley  <andy@insectnation.org>

	* Added angle range fix to pseudorapidity function (thanks to
	Piergiulio Lenzi).
